--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap");
+
+* {
+  left: 0;
+  right: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: "Montserrat", sans-serif;
+  background-color: #142850;
+  color: #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.flex {
+  display: flex;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.img-container {
+  margin-right: -0.8rem;
+}
+
+.img-container img {
+  max-width: 6rem;
+  border-radius: 100%;
+  width: 80%;
+}
+
+.flex:hover > .img-container img {
+  border: 3px solid #18a0fb;
+}
+
+.info-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.name {
+  font-weight: 400;
+  margin-bottom: -0.6rem;
+  text-transform: capitalize;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.comment {
+  font-weight: 800;
+  font-size: larger;
+}
+
+.date {
+  vertical-align: text-bottom;
+  font-size: smaller;
+  color: #4b5468;
+  font-weight: bold;
+  margin-left: 0.8rem;
+  letter-spacing: -1px;
 }
